src/test/ui/issue-4335.stderr
error[E0373]: closure may outlive the current function, but it borrows `v`, which is owned by the current function
  --> $DIR/issue-4335.rs:16:17
   |
16 |     id(Box::new(|| *v))
   |                 ^^  - `v` is borrowed here
   |                 |
   |                 may outlive borrowed value `v`
help: to force the closure to take ownership of `v` (and any other referenced variables), use the `move` keyword
   |
16 |     id(Box::new(move || *v))
   |                 ^^^^^^^

error[E0507]: cannot move out of borrowed content
  --> $DIR/issue-4335.rs:16:20
   |
16 |     id(Box::new(|| *v))
   |                    ^^ cannot move out of borrowed content

error: aborting due to 2 previous errors

